<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.revosassignment.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_vehicleInfoFragment"
            app:destination="@id/vehicleInfoFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_bookingHistoryFragment"
            app:destination="@id/bookingHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/vehicleInfoFragment"
        android:name="com.revosassignment.ui.booking.VehicleInfoFragment"
        android:label="@string/nav_vehicle_info"
        tools:layout="@layout/fragment_vehicle_info">
        <action
            android:id="@+id/action_vehicleInfoFragment_to_bookingFragment"
            app:destination="@id/bookingFragment"
            app:popUpTo="@id/vehicleInfoFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/bookingFragment"
        android:name="com.revosassignment.ui.booking.BookingFragment"
        android:label="@string/nav_book_ride"
        tools:layout="@layout/fragment_booking">
        <action
            android:id="@+id/action_bookingFragment_to_bookingHistoryFragment"
            app:destination="@id/bookingHistoryFragment"
            app:popUpTo="@id/bookingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/bookingHistoryFragment"
        android:name="com.revosassignment.ui.booking.BookingHistoryFragment"
        android:label="@string/nav_book_history"
        tools:layout="@layout/fragment_booking_history">

    </fragment>
</navigation>